--- a/m_html/8_mod_pw.css
+++ b/m_html/8_mod_pw.css
@@ -18,13 +18,13 @@ h1.name {
   justify-content: center; /* 가로 정렬 */
   display: flex;
   align-items: center;
+  cursor: pointer; /* 클릭 가능 */
+  transition: color 0.3s ease; /* 색상 변경 효과 */
 }
 
-h1.name::before {
-  content: "<";
-  margin-right: 10px;
-  
-  cursor: pointer;
+.name:hover {
+  color: #7F6AEE; /* 호버 시 색상 */
+  text-decoration: underline; /* 호버 시 밑줄 추가 */
 }
 
 h1.page_title {
