--- a/m_html/1_signup.css
+++ b/m_html/1_signup.css
@@ -1,5 +1,11 @@
 /* 폰트 추가 */
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Press+Start+2P&display=swap');
+:root {
+  --primary-color: #ff9a9e;
+  --secondary-color: #fad0c4;
+  --text-color: #2c2c2c;
+  --pixel-border: 4px solid black;
+}
 
 /* 페이지 설정 */
 body {
